--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
     "type": "git",
     "url": "https://github.com/WesFerreira/Lander"
   },
+  "main": "js/processed/electron/main.js",
+  "scripts": {
+    "start": "electron ."
+  },
   "license": "MIT",
   "devDependencies": {
     "browserify": "^16.2.2",
+    "electron": "4.0.1",
     "gulp": "^3.9.1",
-    "gulp-notify": "^3.1.0",
     "gulp-concat": "^2.6.1",
+    "gulp-notify": "^3.1.0",
     "gulp-rename": "^1.2.3",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-typescript": "^3.2.3",
     "gulp-uglify": "^3.0.0",
     "typescript": "^2.8.3",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0" 
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "@types/box2d": "0.0.33",
