--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@types/box2d": "0.0.33",
     "@types/pixi.js": "^4.8.5",
     "box2dweb": "^2.1.0-b",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-sass": "^4.0.2",
     "inversify": "^5.0.1",
     "pixi.js": "^4.7.3",
     "reflect-metadata": "^0.1.12"
